Implementes Swagger Documentation. Added new features to test classes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=circulation_predictor
+
+#Open Api Information - Swagger
+name.api= Circulation predictor API 
+description.api= This application determines if a vehicle can circulate based on the "Pico y Placa" regulations, considering the license plate number and date.  
+repo.url.api= https://github.com/
